ajout des fonction

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h2 style="color: #FB1616;">Ne laissez pas cette opportunité passer !</h2>
         <p>Participez à notre programme de formation en Management et Leadership pour transformer votre activité. Développez vos compétences, créez une visibilité exceptionnelle, et assurez la croissance de votre entreprise.</p>
         <a href="./Acceuil.html">
-        <button style="background-color: #0F206D; color: #fff; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;" >Je participe</button></a> <br>
+          <button class="cta-button">S'inscrire maintenant</button></a> <br>
         <div id="close-popup-btn" onclick="closePopup()">X</div>
       </div>
     </div>
